fixes: worked on tablet and mobile screen

--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ font-size: 20px;
 
 .header-section-1 button{
 min-width: 100%;
+font-size: 20px;
 }
 }
 
